<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/act_test_grade3"
    android:visibility="visible" >
 
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <RelativeLayout
	        android:id="@+id/login_view"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dp"
	        android:paddingBottom="20dp"
	        android:visibility="visible" >

	        <TextView
	            android:id="@+id/main_validate_text"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:background="@color/gray"
	            android:ellipsize="end"
	            android:gravity="center"
	            android:padding="15dp"
	            android:textColor="@color/white"
	            android:visibility="gone" />
	    
		    <RelativeLayout
		        android:id="@+id/main_logoimg"
		        android:layout_width="220dp"
		        android:layout_height="165dp"
		        android:layout_below="@id/main_validate_text"
		        android:layout_centerHorizontal="true"
		        android:background="@drawable/main_tantest"
		        android:visibility="visible" >

		    </RelativeLayout>
		    
		    <RelativeLayout
		        android:id="@+id/main_edit_inputs"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/main_logoimg"
		        android:layout_centerHorizontal="true"
		        android:layout_centerInParent="true"
		        android:visibility="visible" >
		        
		    <RelativeLayout
		        android:id="@+id/main_email_bg"
		        android:layout_width="235dp"
		        android:layout_height="85dp"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/act_main_editbg"
		        android:visibility="visible" >
		        
		        <EditText
		            android:id="@+id/main_email"
		            android:layout_width="200dp"
		            android:layout_height="wrap_content"
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="33dp"
		            android:background="@drawable/no_bg"
		            android:ems="10"
		            android:gravity="center_vertical|center_horizontal"
		            android:hint="@string/act_main_email"
		            android:inputType="textEmailAddress"
		            android:textColor="@color/black"
		            android:textColorHint="@color/black"
		            android:nextFocusForward="@+id/main_password" />
		        
		    </RelativeLayout>
		  
		    <RelativeLayout
		        android:id="@+id/main_password_bg"
		        android:layout_width="235dp"
		        android:layout_height="85dp"
		        android:layout_below="@+id/main_email_bg"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="18dp"
		        android:background="@drawable/act_main_editbg"
		        android:visibility="visible" >
		        
		        <EditText
		            android:id="@+id/main_password"
		            android:layout_width="200dp"
		            android:layout_height="wrap_content"
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="33dp"
		            android:background="@drawable/no_bg"
		            android:gravity="center_vertical|center_horizontal"
		            android:hint="@string/act_main_password"
		            android:inputType="textPassword"
		            android:textColor="@color/black"
		            android:textColorHint="@color/black" 
		            android:nextFocusForward="@+id/main_connect"/>
		        
		    </RelativeLayout>
			
		    <RelativeLayout
		        android:id="@+id/main_code_bg"
		        android:layout_width="235dp"
		        android:layout_height="85dp"
		        android:layout_centerHorizontal="true"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/act_main_editbg_val"
		        android:visibility="gone" >
		        
				<EditText
				    android:id="@+id/main_code"
				    android:layout_width="200dp"
				    android:layout_height="wrap_content"
				    android:layout_centerHorizontal="true"
				    android:layout_marginTop="33dp"
				    android:background="@drawable/no_bg"
				    android:ems="10"
				    android:gravity="center_vertical|center_horizontal"
				    android:hint="@string/act_main_code"
				    android:inputType="textPassword"
				    android:textColor="@color/black"
				    android:textColorHint="@color/black"
				    android:nextFocusForward="@+id/main_validate" />
				
		    </RelativeLayout>
		    
		    </RelativeLayout> 
		    
		    <ImageButton
		        android:id="@+id/main_validate"
		        android:layout_width="65dp"
		        android:layout_height="50dp"
		        android:layout_below="@id/main_edit_inputs"
		        android:layout_centerHorizontal="true"
		        android:layout_marginBottom="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/main_connect_buttom"
		        android:contentDescription="@string/act_main_verify"
		        android:onClick="verifyCodeButtom"
		        android:visibility="gone" />

		    <ImageButton
		        android:id="@+id/main_connect"
		        android:layout_width="65dp"
		        android:layout_height="50dp"
		        android:layout_below="@id/main_edit_inputs"
		        android:layout_centerHorizontal="true"
		        android:layout_marginBottom="20dp"
		        android:layout_marginTop="20dp"
		        android:background="@drawable/main_connect_buttom"
		        android:contentDescription="@string/act_main_connect"
		        android:onClick="connectButtom"
		        android:visibility="visible" />
			
			<TextView
			    android:id="@+id/main_validate_resend"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/main_validate"
			    android:layout_centerHorizontal="true"
			    android:layout_marginBottom="30dp"
			    android:layout_marginTop="15dp"
			    android:clickable="true"
			    android:gravity="center"
			    android:onClick="sendCodeButtom"
			    android:text="@string/act_main_resend_code"
			    android:textColor="@color/white"
			    android:visibility="gone" />
		
		    <ProgressBar
		        android:id="@+id/main_progressbar"
		        android:layout_width="70dp"
		        android:layout_height="55dp"
		        android:layout_below="@+id/main_edit_inputs"
		        android:layout_centerHorizontal="true"
		        android:layout_marginBottom="15dp"
		        android:layout_marginTop="15dp"
		        android:indeterminate="true"
		        android:visibility="gone" />
		    
		</RelativeLayout>
	</ScrollView>

	<!-- 
	<ProgressBar
	    android:id="@+id/main_initProgressbar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:visibility="gone" />
	-->

</RelativeLayout>